--- a/docs/basics.adoc
+++ b/docs/basics.adoc
@@ -1,4 +1,5 @@
-## The Basics
+= The Basics
+:experimental:
 
 In this step, you will create a straightforward application serving a `hello` endpoint. To demonstrate dependency injection this endpoint uses a `greeting` bean. 
 
